--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,35 +1,44 @@
-@charset "UTF-8";
-
-*{
+* {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
-body{
-    background-color: rgb(162, 167, 180);
-}
-header{
-    height: 100px;
-}
-main{
-    background-color: whitesmoke;
-    width: 600px;
-    margin: auto;
-    box-shadow: 3px 3px 6px rgba(80, 80, 85, 0.863);
-    border-radius: 15px;
-    padding: 15px;
 
+body {
+    background-image: linear-gradient(to bottom left,rgba(26, 26, 255, 0.877),#acacffd5,rgba(58, 0, 112, 0.842));
+    position: relative;
+    height: 100vh;
 }
-h1,h2 {
-    color: rgb(62, 0, 121);
+
+main {
+    background-color: rgba(253, 250, 250, 0.945);
+    width: 560px;
+    margin: auto;
+    padding: 10px;
+    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.473);
+    border-radius: 10px;
 }
-#logo{
-    float: left;
+
+h1 {
+    font-size: 2em;
+    color: rgb(58, 0, 112);
 }
-img{
+
+h2 {
+    font-size: 1.5em;
+    color: rgb(58, 0, 112);
+}
+
+img.lado {
     float: right;
 }
-p{
-    text-align: justify;
-    text-indent: 10px;
 
+a {
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(58, 0, 112);
+}
+
+a:hover {
+    text-decoration: underline;
+    color: rgb(26, 26, 255);
 }
